logs/dag_id=ETL/run_id=manual__2023-05-24T17:09:20.161548+00:00/task_id=add_data/attempt=40.log
[2023-05-25T17:23:27.062+0000] {taskinstance.py:1084} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: ETL.add_data manual__2023-05-24T17:09:20.161548+00:00 [queued]>
[2023-05-25T17:23:27.077+0000] {taskinstance.py:1084} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: ETL.add_data manual__2023-05-24T17:09:20.161548+00:00 [queued]>
[2023-05-25T17:23:27.078+0000] {taskinstance.py:1282} INFO - 
--------------------------------------------------------------------------------
[2023-05-25T17:23:27.078+0000] {taskinstance.py:1283} INFO - Starting attempt 40 of 45
[2023-05-25T17:23:27.078+0000] {taskinstance.py:1284} INFO - 
--------------------------------------------------------------------------------
[2023-05-25T17:23:27.099+0000] {taskinstance.py:1303} INFO - Executing <Task(PostgresOperator): add_data> on 2023-05-24 17:09:20.161548+00:00
[2023-05-25T17:23:27.105+0000] {standard_task_runner.py:55} INFO - Started process 3587 to run task
[2023-05-25T17:23:27.108+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'ETL', 'add_data', 'manual__2023-05-24T17:09:20.161548+00:00', '--job-id', '238', '--raw', '--subdir', 'DAGS_FOLDER/refresh_token_DAG.py', '--cfg-path', '/tmp/tmpfre6y6hl']
[2023-05-25T17:23:27.110+0000] {standard_task_runner.py:83} INFO - Job 238: Subtask add_data
[2023-05-25T17:23:27.314+0000] {task_command.py:388} INFO - Running <TaskInstance: ETL.add_data manual__2023-05-24T17:09:20.161548+00:00 [running]> on host 2fa3ade57007
[2023-05-25T17:23:27.410+0000] {taskinstance.py:1511} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=fox
AIRFLOW_CTX_DAG_ID=ETL
AIRFLOW_CTX_TASK_ID=add_data
AIRFLOW_CTX_EXECUTION_DATE=2023-05-24T17:09:20.161548+00:00
AIRFLOW_CTX_TRY_NUMBER=40
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-05-24T17:09:20.161548+00:00
[2023-05-25T17:23:27.411+0000] {sql.py:254} INFO - Executing: 
            insert into spotify_data (played_at) values ('['2023-05-24T09:27:03.506Z', '2023-05-24T09:13:18.726Z', '2023-05-24T09:02:43.570Z', '2023-05-24T08:57:23.618Z', '2023-05-24T08:51:46.910Z', '2023-05-24T08:45:04.757Z', '2023-05-24T08:40:18.392Z', '2023-05-24T08:36:58.155Z', '2023-05-24T08:33:03.048Z', '2023-05-24T08:29:23.431Z']')
        
[2023-05-25T17:23:27.421+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-05-25T17:23:27.731+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-05-25T17:23:27.734+0000] {sql.py:375} INFO - Running statement: 
            insert into spotify_data (played_at) values ('['2023-05-24T09:27:03.506Z', '2023-05-24T09:13:18.726Z', '2023-05-24T09:02:43.570Z', '2023-05-24T08:57:23.618Z', '2023-05-24T08:51:46.910Z', '2023-05-24T08:45:04.757Z', '2023-05-24T08:40:18.392Z', '2023-05-24T08:36:58.155Z', '2023-05-24T08:33:03.048Z', '2023-05-24T08:29:23.431Z']')
        , parameters: None
[2023-05-25T17:23:27.735+0000] {taskinstance.py:1775} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 266, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "2023"
LINE 2: ...  insert into spotify_data (played_at) values ('['2023-05-24...
                                                             ^

[2023-05-25T17:23:27.747+0000] {taskinstance.py:1326} INFO - Marking task as UP_FOR_RETRY. dag_id=ETL, task_id=add_data, execution_date=20230524T170920, start_date=20230525T172327, end_date=20230525T172327
[2023-05-25T17:23:27.774+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 238 for task add_data (syntax error at or near "2023"
LINE 2: ...  insert into spotify_data (played_at) values ('['2023-05-24...
                                                             ^
; 3587)
[2023-05-25T17:23:27.806+0000] {local_task_job.py:212} INFO - Task exited with return code 1
[2023-05-25T17:23:27.829+0000] {taskinstance.py:2585} INFO - 0 downstream tasks scheduled from follow-on schedule check
